--- a/libs/remark-css-0.0.1/default.css
+++ b/libs/remark-css-0.0.1/default.css
@@ -4,7 +4,7 @@ a, a > code {
 }
 .footnote {
   position: absolute;
-  bottom: 3em;
+  bottom: 0;
   padding-right: 4em;
   font-size: 90%;
 }
@@ -59,6 +59,11 @@ blockquote {
 .remark-slide table thead th { border-bottom: 1px solid #ddd; }
 th, td { padding: 5px; }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) { background: #eee }
+
+.tocify {
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
 
 @page { margin: 0; }
 @media print {
